[workspace]
members = [
    "bpfjailer-common",
    "bpfjailer-bpf",
    "bpfjailer-client",
    "bpfjailer-daemon",
    "bpfjailer-bootstrap",
]
exclude = [
    "test_task_storage",
]
resolver = "2"

[workspace.dependencies]
libbpf-rs = "0.21"
libbpf-sys = "1.4"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
nix = "0.30"
log = "0.4"
env_logger = "0.11"
x509-parser = "0.18"
ring = "0.17"
bytes = "1.5"

[profile.release]
strip = true
lto = true
