[package]
name = "bpfjailer-bootstrap"
version = "0.1.0"
edition = "2021"
description = "BpfJailer bootstrap loader for daemonless installation"

[[bin]]
name = "bpfjailer-bootstrap"
path = "src/main.rs"

[dependencies]
bpfjailer-common = { path = "../bpfjailer-common" }
libbpf-rs = "0.26"
libbpf-sys = "1.4"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
libc = "0.2"
