[package]
name = "bpfjailer-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bpfjailer-daemon"
path = "src/main.rs"

[dependencies]
bpfjailer-common = { path = "../bpfjailer-common" }
bpfjailer-client = { path = "../bpfjailer-client" }
libbpf-rs = "0.21"
libbpf-sys = "1.4"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
bytes = { workspace = true }
x509-parser = "0.18"
ring = "0.17"
xattr = "1.3"
libc = "0.2"
